--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
+    ext.retrofit_version = '2.4.0'
+    ext.okhttp3_version = '3.4.1'
+    ext.gson_version = '2.8.5'
+
     repositories {
         google()
         jcenter()
