--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,12 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation "com.google.code.gson:gson:$gson_version"
+
+    // New Components (ViewModel)
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
+    //RX
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava"
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
 }
