--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     ext.retrofit_version = '2.4.0'
     ext.okhttp3_version = '3.4.1'
     ext.gson_version = '2.8.5'
+    ext.lifecycle_version = '1.1.1'
+    ext.rxandroid = '2.0.1'
+    ext.rxjava = '2.0.3'
 
     repositories {
         google()
