--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="muhammadbahaa.actorbox">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
             android:allowBackup="true"
@@ -11,8 +12,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.actor_details.ActorDetailsActivity">
-        </activity>
+        <activity android:name=".ui.save_image.SaveImageActivity"/>
+
+        <activity android:name=".ui.actor_details.ActorDetailsActivity"/>
+
         <activity android:name=".ui.actor.ActorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
